syntax = "proto3";

package kong.admin.service.v1;

import "google/api/annotations.proto";
import "kong/admin/model/v1/cluster.proto";
import "kong/admin/model/v1/key.proto";
import "kong/admin/model/v1/pagination.proto";

option go_package = "github.com/kong/koko/internal/gen/kong/admin/service/v1;v1";

service KeyService {
  rpc GetKey(GetKeyRequest) returns (GetKeyResponse) {
    option (google.api.http) = {get: "/v1/keys/{id}"};
  }

  rpc CreateKey(CreateKeyRequest) returns (CreateKeyResponse);

  rpc UpsertKey(UpsertKeyRequest) returns (UpsertKeyResponse);

  rpc DeleteKey(DeleteKeyRequest) returns (DeleteKeyResponse) {
    option (google.api.http) = {delete: "/v1/keys/{id}"};
  }
  rpc ListKeys(ListKeysRequest) returns (ListKeysResponse) {
    option (google.api.http) = {get: "/v1/keys"};
  }
}

message GetKeyRequest {
  string id = 1;
  model.v1.RequestCluster cluster = 2;
}

message GetKeyResponse {
  model.v1.Key item = 1;
}

message CreateKeyRequest {
  model.v1.Key item = 1;
  model.v1.RequestCluster cluster = 2;
}

message CreateKeyResponse {
  model.v1.Key item = 1;
}

message UpsertKeyRequest {
  model.v1.Key item = 1;
  model.v1.RequestCluster cluster = 2;
}

message UpsertKeyResponse {
  model.v1.Key item = 1;
}

message DeleteKeyRequest {
  string id = 1;
  model.v1.RequestCluster cluster = 2;
}

message DeleteKeyResponse {}

message ListKeysRequest {
  model.v1.RequestCluster cluster = 1;
  model.v1.PaginationRequest page = 2;
}

message ListKeysResponse {
  repeated model.v1.Key items = 1;
  model.v1.PaginationResponse page = 2;
}
